<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="20sp"
	tools:context="com.auditpro.mobile_client.pages.InfoProductPage">

	<com.auditpro.mobile_client.controls.CustomTextView
		style="@style/customText"
		android:text="@string/message_info_contents"
		android:textStyle="bold"
		android:textSize="20sp"
		android:id="@+id/productNameText"
		android:layout_marginBottom="10dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
	<GridLayout
		android:columnCount="4"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_brand_name"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/brandNameText"
			android:text="@string/message_info_contents"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="3"
			android:layout_columnWeight="3"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_price_msrp"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/msrpText"
			android:text="@string/message_info_contents_short"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="1"
			android:layout_columnWeight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_average"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/averageText"
			android:text="@string/message_info_contents_short"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="1"
			android:layout_columnWeight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_min"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/minText"
			android:text="@string/message_info_contents_short"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="1"
			android:layout_columnWeight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_max"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/maxText"
			android:text="@string/message_info_contents_short"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="1"
			android:layout_columnWeight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_weighed"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/weighedText"
			android:text="@string/message_info_contents"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="3"
			android:layout_columnWeight="3"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_upc"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/upcText"
			android:text="@string/message_info_contents"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="3"
			android:layout_columnWeight="3"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_sku"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/skuText"
			android:text="@string/message_info_contents"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="3"
			android:layout_columnWeight="3"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_reorder_code"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/reorderCodeText"
			android:text="@string/message_info_contents"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="3"
			android:layout_columnWeight="3"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_category"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/categoryText"
			android:text="@string/message_info_contents"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="3"
			android:layout_columnWeight="3"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_subcategory"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/subcategoryText"
			android:text="@string/message_info_contents"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="3"
			android:layout_columnWeight="3"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:text="@string/message_info_label_product_type"
			android:layout_gravity="end"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<com.auditpro.mobile_client.controls.CustomTextView
			style="@style/customText"
			android:id="@+id/productTypeText"
			android:text="@string/message_info_contents"
			android:layout_marginStart="5dp"
			android:layout_columnSpan="3"
			android:layout_columnWeight="3"
			android:layout_width="0dp"
			android:layout_height="wrap_content" />
	</GridLayout>
</LinearLayout>
